Archive2/bb/f1ab6b7984f7eb/output
main.cpp:2:18: error: expected ';' or '{' before 'z'
 enum class B:int z;         // enum class B:int is not a complete type
                  ^
main.cpp:2:18: error: expected class-key before 'z'
main.cpp:2:19: error: invalid type in declaration before ';' token
 enum class B:int z;         // enum class B:int is not a complete type
                   ^
