Archive2/bb/f1ab6b7984f7eb/main.cpp
enum A{} t;                 // enum A{} is a complete type
enum class B:int z;         // enum class B:int is not a complete type
int main()
{
}